--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="p-2">
-                    <p>12.00</p>
+                    <p>{{element.time}}</p>
                 </div>
             </div>
         </div>
@@ -90,21 +90,19 @@
                 </div>
             </div>
 
-<!-- background centrale div -->
+<!-- background centrale div container chat-->
             <div class="open-chat flex-grow-1">
-                <div class="p-5 d-flex flex-column">
-                    <div class="d-flex justify-content-start ">
-                        <p class="ricevuti d-flex justify-content-between rounded-3 p-2 mt-1">What do you want?
-                            <span class="hour-sent mt-3">12.00</span>
-                        </p>
-                    </div>
-                    <div class="d-flex justify-content-end">
-                        <p class="inviati d-flex justify-content-between rounded-3 p-2 mt-1">you
+<!-- per ogni elemento, indice in contacs posizione [es.4] prendimi il messagge -->
+                <div class="p-5 d-flex flex-column" v-for="(element,index) in contacts[4].messages">
+<!-- con v bind prendo lo status dell'elemento se è sent mi si attiva la classe sent in css, se è received mi si attiva la classe received -->
+                    <div v-bind:class="element.status">
+                        <p class="inviati d-flex justify-content-between rounded-3 p-2 mt-1">{{element.message}}
                             <span class="hour-sent mt-3">12.00</span>
                         </p>
                     </div>
                 </div>
             </div>
+
 <!-- barra invio -->
             <div class="input-group mb-3">
                 <span class="input-group-text">
